homePage.css
*{
	text-align: center;
	color:white;
	font-family: Arial;
}
body {
	background: #6b6b6b;
	background-image:url('images/background1.png');
	border-width:  5px;
}
/* Style the tab */
.tab {
	overflow: hidden;
	border-bottom: 1px solid white;
}

/* Style the buttons inside the tab */
.tab button {
	background-color: inherit;
	float: left;
	border: none;
	outline: none;
	cursor: pointer;
	padding: 14px 16px;
	transition: 0.3s;
	font-size: 17px;
}

/* Change background color of buttons on hover */
.tab button:hover {
	background-color: #ddd;
}

/* Create an active/current tablink class */
.tab button.active {
	background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
	display: none;
	padding: 6px 12px;
	border-top: none;
}

#header {
	position: center;
	width: 600px;
	height: 70px;
	text-align: center;

	color: white;
	font-size: 1em;
	font-weight: bold;
	font-style: normal;
	font-family: sans-serif;
    margin: 0 auto;
	padding: 5px;
		border-style: none;
	/*
	border-style: solid;
	border-color: white;
        border-width:  5px;
	box-shadow: 0.5em 0.5em 1px #A6A6A6;
	*/
}


#meltStarContainer{
	width:10em;
	height:10em;
	background: #000000;
	margin: auto;
}


#meltStar{
	width:10em;
	height:5em;
	display: inline-block;
	vertical-align:middle;
	margin: auto;
	padding: 20% 0;
}

#meltStar:hover{
	/*background-image:url('images/meltStarBg.png'); 
	*/
	background: #302e2f;
}

#meltStarImg{
	width:10em;
	height:5em;

}

.box {
	width:10em;
	height:10em;
	background-color: DimGray;
	font-size: 1em;
	font-weight: bold;
	font-style: normal;
	font-family: sans-serif;
	display: table-cell;
	vertical-align:middle;

}

.box:hover {
	background-color: LightGrey;
}

.boxLink a{
		text-decoration: none;
	
}

#linkTable {
    margin-left:auto; 
    margin-right:auto; 
 }


#p{
	text-align: center;
	margin:0px;
}
			
#myChart{
    width:30em;
	height:20em;
}

#chartBckgnd{
    background-color: white;
}

